Fixed notification close button alignment.

--- a/src/styles.css
+++ b/src/styles.css
@@ -283,8 +283,8 @@ header > nav > .settings > #theme:active{
 
 .notification-window > .notificationClose{
     position: relative;
-    top: 0.5rem;
-    left: 16rem;
+    top: 0.65rem;
+    left: 15.5rem;
     background-color: var(--tertiary-color);
     color: var(--primary-color);
     animation: displayNotificationBtn 0.8s ease-in-out;
